Add swagger and some log statements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.flyway.locations=classpath:db/migration,classpath:db/local
-
+springdoc.swagger-ui.path=/
 # http://localhost:8080/h2-console url to access embedded db
