--- a/.gitops.config.yaml
+++ b/.gitops.config.yaml
@@ -16,5 +16,5 @@ previewConfig:
     # Paths that should be replaced
     - path: stock-service.image.tag
       variable: GIT_COMMIT # this is the latest git hash of the PR branch
-    - path: stock-service.ingress.host
+    - path: stock-service.network.http.ingress.host
       variable: ROUTE_HOST # this is the resolved SHA256_8CHAR_BRANCH_HASH from above
